--- a/index.html
+++ b/index.html
@@ -170,12 +170,17 @@
   <div class="textbox">
     <h2>Portfolio</h2>
     <ul>
-      <li><strong>Web Portfolio:</strong> A simple portfolio made with HTML, CSS, and JavaScript.</li>
-      <li><img src="https://github.com/PR4NVF/NuevoRep/blob/main/Screenshot%202025-01-30%20215141.png?raw=true"></li>
-    </ul>
+       <li><strong>Web Portfolio:</strong> A simple portfolio made with HTML, CSS, and JavaScript.</li>
+      <li>
+        <img src="https://github.com/PR4NVF/NuevoRep/blob/main/Screenshot%202025-01-30%20215141.png?raw=true" 
+             alt="Portfolio Screenshot" width="600" height="400" loading="lazy">
+      </li>
 
-      <li><strong>Vehicle-Based Puzzle Game:</strong> Developed in Ruby, featuring obstacle-based navigation. Made at the Tech Trek 2024, winning 1st place at Tech Exhibit. </li>
-      <li><img src="https://github.com/PR4NVF/NuevoRep/blob/main/Screenshot%202024-11-02%20134136.png?raw=true"></li>
+      <li><strong>Vehicle-Based Puzzle Game:</strong> Developed in Ruby, featuring obstacle-based navigation. Made at the Tech Trek 2024, winning 1st place at Tech Exhibit.</li>
+      <li>
+        <img src="https://github.com/PR4NVF/NuevoRep/blob/main/Screenshot%202024-11-02%20134136.png?raw=true" 
+             alt="Game Screenshot" width="600" height="400" loading="lazy">
+      </li>
     </ul>
   </div>
 </div>
